Changed package name

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "hustle_parser"
+name = "hustle-parser"
 version = "0.1.0"
 authors = ["Matthew Dutson <dutson@wisc.edu>", "Kevin Gaffney <kgaff33@gmail.com>"]
 edition = "2018"
